# rpi-rust-os

./: Cargo.toml  readme.md
.cargo/: config.toml
src/: boot.S  console.rs  framebuffer.rs  graphics.rs  lib.rs  linker.ld  main.rs  uart.rs
tests/: basic_boot.rs
