[package]
name = "rpi-mini-os"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.5.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
test = false
doctest = false

[[bin]]
name = "rpi-mini-os"
path = "src/main.rs"
test = false
doctest = false
bench = false
